2013-12-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/history.c src/gp_hist.h docs/gnuplot.doc:
	New: "history !N" reexecutes the command at history entry N.

2013-12-12  Erik Olofsen  <olofsen@users.sf.net>

	* term/tek.trm:  New terminal driver "sixel" for old DEC terminals
	and printers, emulated by some versions of xterm.

2013-12-12  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  Simplify tests for libgd support libraries.

	* src/wxterminal/gp_cairo.c src/wxterminal/wxt_gui.*:
	Modify vertical centering of enhanced text to match default case.
	Bug #1309

	* term/emf.trm:  Invalidate font name at start of each plot.
	Bug #1306

2013-12-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (key_text):  Apply key title font to key entries.
	Bug #1309

	* src/qtterminal/qt_term.cpp (qt_options):  qt structure has not yet
	been initialized at the time qt_options is first called.

2013-12-11  Thomas Bleher <tbleher@gmx.de>

	* src/qtterminal/QtGnuplotScene.cpp src/qtterminal/QtGnuplotWidget.*
 	src/qtterminal/QtGnuplotWindow.*:

	QtGnuplotWidget can be used to embed gnuplot into an existing Qt
	application. This patch makes integration easier.
	- QtGnuplotWidget gets the parent QWidget pointer as its first parameter
	  so that QtGnuplotWidget can be loaded from ui files.
	- The export functions in QtGnuplotWidget get the target filename from a
	  parameter, enabling the embedding application to query for the
	  filename in some other way.
	- loadSettings and saveSettings can use a configurable path for their
	  settings, so different plot windows can have different settings.

2013-12-11  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/emf.trm: Support true pattern-fill. Apply global linewidth.

	* src/util.c (gprintf):  C compiler in SJIS locale does not like
	in-line UTF-8 string constants.

2013-11-22  Christoph Bersch <usenet@bersch.net>

	* src/axis.h (ALL_AXES = -1) src/unset.c (unset_tics):