@@ -1,3 +1,11 @@
+2013-12-15  Jyrki Yli-Nokari  <jyrkiylinokari@gmail.com>
+
+	* src/bitmap.c configure.in:
+	Jyrki Yli-Nokari, the original author of the code in bitmap.c,
+	has agreed to relicense it as dual license (gnuplot + BSD).
+	This removes a restriction to non-commercial use imposed by the
+	license terms that appeared in earlier versions of file bitmap.c.
+
 2013-12-14  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/command.c src/history.c src/gp_hist.h docs/gnuplot.doc:
